# milo_codexdev

./: .gitignore  AGENTS.md  README.md  config.yaml  model_download.sh  pyproject.toml  requirements.txt
.n8n/workflows/: gmail_read.json
milo_core/: __init__.py  commands.py  config.py  main.py  memory.py  memory_manager.py  plugin_manager.py  workflows.py
milo_core/gui/: __init__.py  app.py
milo_core/llm/: __init__.py  gemma.py  huggingface.py  interface.py
milo_core/voice/: __init__.py  conversation.py  engines.py  interface.py
milo_memory_db/: chroma.sqlite3
plugins/: base.py  google_search_skill.py  test_skill.py
scripts/: build_executable.sh
tests/: test_commands.py  test_conversation.py  test_end_to_end.py  test_entrypoint.py  test_gemma_model.py  test_google_search_skill.py  test_gui.py  test_main.py  test_memory.py  test_memory_manager.py  test_plugin_manager.py  test_voice_engines.py  test_workflows.py
