[project]
name = "milo-codexdev"
version = "0.1.0"
description = "Minimal Input Life Organizer"
authors = [
    {name = "Rami Guzlan"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "llama-cpp-python (>=0.2.71,<0.3.0)",
    "faster-whisper (>=0.10.0,<0.11.0)",
    "TTS (>=0.22.0,<0.23.0)" # Changed piper-tts to TTS (Coqui TTS)
]

[project.scripts]
milo-core = "milo_core.main:main"

# This section is for Poetry's specific configuration
[tool.poetry]
name = "milo-codexdev" # Should match [project].name
version = "0.1.0" # Should match [project].version
description = "Minimal Input Life Organizer" # Should match [project].description
authors = ["Rami Guzlan <youremail@example.com>"] # Poetry prefers this format, update with your email
readme = "README.md"
packages = [{include = "milo_core"}] # This tells Poetry your package code is in the 'milo_core' directory

[tool.poetry.dependencies]
python = ">=3.10" # Should match [project].requires-python
# Main dependencies will also be reflected here by 'poetry add'
requests = ">=2.32.3,<3.0.0"
llama-cpp-python = ">=0.2.71,<0.3.0"
faster-whisper = ">=0.10.0,<0.11.0"
TTS = ">=0.22.0,<0.23.0" # Changed piper-tts to TTS (Coqui TTS)

[tool.poetry.group.dev.dependencies]
# Development dependencies like ruff and pytest will be added here by
# 'poetry add <package_name> --group dev'
ruff = "^0.11.12"
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
